Prevent overflow for long usernames/domains

--- a/src/components/notifications/notifications.scss
+++ b/src/components/notifications/notifications.scss
@@ -81,6 +81,7 @@
 
   .follow-text, .move-text {
     padding: 0.5em 0;
+    overflow-wrap: break-word;
   }
 
   .status-el {
